# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.388 2005/09/22 16:26:31 agaffney Exp $

*GLI-0.2 (4 Aug 2005)

  22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  add code in _edit_config() to comment line where variable is defined
  previously

  21 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  fat16 mojo

  20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  prevent do_recommended() from being run twice
  rewrite do_recommended() to be more robust
  src/GLIArchitectureTemplate.py:
  rework _edit_config() to not write duplicate entries

  17 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  added do_recommended() function to automatically created 256M/1G/* layout

  17 Sep 2005; Preston Cody <codeman@gentoo.org>
  src/gli-dialog.py:  added set_distcc to the list
  GenDialog: added set_distcc. untested.
  IP: added install_distcc flag.
  AT: added install_distcc function based on the flag. runs after build_kernel
  changed AT spawn command for distcc for nodeps.
  
  16 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  add rot13ify() function

  16 Sep 2005; Preston Cody <codeman@gentoo.org>
  src/GenDialog.py
  added a sentence of text.  unchecking support added.
  
  15 Sep 2005; Preston Cody <codeman@gentoo.org>
  src/GLIUtility.py
  added get_grp_pkgs_from_cd() to return a list of packages in GRP for FE menus
  src/GenDialog.py 
  still working on extra_packages. transformed the list to new format.
  added GRP indication to list.  untested.
  TODO lists updated.
  src/fe/dialog/gli-dialog.py
  spelling mistook.
  
  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  get_snapshot_from_cd() returns '' instead of 'file://' if nothing found

  5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>